--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,7 @@ main {
 }
 
 .section:nth-child(2) {
-    background-color: #4BA3C3;
+    background-color: #2a7f9e;
 }
 
 .section:nth-child(3) {
@@ -372,24 +372,28 @@ p {
 .section:nth-child(2) h3,
 .section:nth-child(2) p {
     color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .section:nth-child(3) h2,
 .section:nth-child(3) h3,
 .section:nth-child(3) p {
     color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .section:nth-child(4) h2,
 .section:nth-child(4) h3,
 .section:nth-child(4) p {
     color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .section:nth-child(5) h2,
 .section:nth-child(5) h3,
 .section:nth-child(5) p {
     color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .section:nth-child(6) h2,
@@ -398,6 +402,7 @@ p {
 .section:nth-child(6) strong,
 .section:nth-child(6) label {
     color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 /* ===================================
