--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,7 @@ main {
 }
 
 .section:nth-child(2) {
-    background-color: #2a7f9e;
+    background-color: #1a5f7a;
 }
 
 .section:nth-child(3) {
